--- a/js-practice.html
+++ b/js-practice.html
@@ -41,6 +41,33 @@
 
       let greeting = 'My name is' + " " + name;
       console.log(greeting);
+
+      console.log("Using functions:");
+      // function to make square numbers
+
+      function makeSquare(theNumb){
+          let squared = theNumb * theNumb;
+          return squared;
+      }      
+      let try01 = makeSquare(3);
+      console.log(try01);
+      let try02 = makeSquare(18);
+      console.log(try02);
+      let try03 = makeSquare(25);
+      console.log(try03);
+
+      // Functions on my own
+
+      function makeName(firstName, middleName, lastName){
+          let fullName = firstName + " " + middleName + " " + lastName;
+          return fullName;
+      }
+      let myName = makeName("Aaron", "Michael", "Williams");
+      console.log(myName);
+      let betoName = makeName("Robert", "\"Beto\"", "O'Rourke");
+      console.log(betoName);
+      let theGoat = makeName("Michael", "Jeffrey", "Jordan");
+      console.log(theGoat);
     </script>
 </body>
 </html>
