--- a/js-practice.html
+++ b/js-practice.html
@@ -68,6 +68,35 @@
       console.log(betoName);
       let theGoat = makeName("Michael", "Jeffrey", "Jordan");
       console.log(theGoat);
+
+      // Just a log to show in our Console
+      console.log("Making a better name function:");
+
+      // A better name function to fix middle initials
+      function makeBetterName(firstName, middleName, lastName) {
+        if (middleName.length === 1) {
+            middleName = middleName + ".";
+        }
+      let fullName = firstName + " " + middleName + " " + lastName;
+      return fullName;
+      }
+      console.log(makeBetterName("Joan", "Marie", "Larkin"));
+      console.log(makeBetterName("John", "F", "Kennedy"));
+      console.log(makeBetterName("Dwight", "K", "Schrute"));
+
+      // Making a score comparison function
+      function scoreCompare(home, away) {
+          if (home > away) {
+              return "Home team wins!";
+          } else if (home === away) {
+              return "It was a tie";
+          } else {
+              return "Away team wins :(";
+          }
+      }
+      console.log(scoreCompare(5,3));
+      console.log(scoreCompare(3,5));
+      console.log(scoreCompare(3,3));
     </script>
 </body>
 </html>
